fixtures/vyper/simple/overflow/positive/u32-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "4294967295"
#!           ],
#!           "caller": "0x68e065db9862077890ad8dcEd171006C5Edd2c7e"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: uint32) -> uint32:
    return witness + 1
